--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,7 @@
 	<name>Explore With Me</name>
 	<modules>
 		<module>stat_svc</module>
-		<module>stat_svc/dto</module>
-		<module>stat_svc/client</module>
-		<module>stat_svc/service</module>
+		<module>ewm-svc</module>
 	</modules>
 
 	<groupId>ru.practicum</groupId>
