--- a/ewm-svc/src/main/resources/application.properties
+++ b/ewm-svc/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=ewm-service
+server.port=8080
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+spring.datasource.username=ewm
+spring.datasource.password=ewm
+
+#---
+spring.config.activate.on-profile=test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:ewm
+spring.datasource.username=test
+spring.datasource.password=test
