--- a/stat_svc/service/src/main/resources/application.properties
+++ b/stat_svc/service/src/main/resources/application.properties
@@ -1,10 +1,17 @@
-server.port=8080
+server.port=9090
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/stats
+spring.datasource.username=stats
+spring.datasource.password=stats
+
+#---
+spring.config.activate.on-profile=test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:stats
 spring.datasource.username=stats
 spring.datasource.password=stats
