--- a/stat_svc/service/src/main/resources/application.properties
+++ b/stat_svc/service/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=9090
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
