--- a/stat_svc/service/src/main/resources/application.properties
+++ b/stat_svc/service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=9090
 
+spring.jackson.time-zone=Europe/Moscow
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
