--- a/ewm-svc/pom.xml
+++ b/ewm-svc/pom.xml
@@ -99,6 +99,18 @@
             <artifactId>mapstruct</artifactId>
             <version>1.6.2</version>
         </dependency>
+
+        <!-- Test -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
