--- a/ewm-svc/src/main/resources/application.properties
+++ b/ewm-svc/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 server.port=8080
+explore-with-me.stat-svc.url=http://localhost:9090
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
-spring.datasource.username=ewm
-spring.datasource.password=ewm
+spring.datasource.url=jdbc:postgresql://localhost:5432/main
+spring.datasource.username=user
+spring.datasource.password=user
 
 #---
 spring.config.activate.on-profile=test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:ewm
+spring.datasource.url=jdbc:h2:mem:main
 spring.datasource.username=test
 spring.datasource.password=test
